# varaus

./: .gitignore  LICENSE  README.md
backend/: .gitignore  compose.yml  config.py  database.py  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 98c329c7f60d_add_resources.py  fedb18a0b550_add_occurences.py
backend/src/: main.py
backend/src/api/: reservations.py  resources.py
backend/src/core/: database.py
backend/src/models/: __init__.py  reservation.py  resource.py
frontend/: .cta.json  components.json  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: i18n.ts  main.tsx  routeTree.gen.ts  styles.css
frontend/src/api/models/: conflictCheckRequest.ts  conflictCheckResponse.ts  conflictDetail.ts  hTTPValidationError.ts  index.ts  interval.ts  occurrenceCreate.ts  occurrenceRead.ts  occurrenceWithReservationRead.ts  readOccurrencesParams.ts  readReservationsParams.ts  readResourcesApiResourcesGetParams.ts  readResourcesParams.ts  reservationCreate.ts  reservationRead.ts  reservationStatus.ts  reservationUpdate.ts  reservationWithOccurrencesCreate.ts  reservationWithOccurrencesRead.ts  (+5 more)
frontend/src/components/: ComboboxMultiple.tsx  DateTimePicker.tsx  Header.tsx  RRuleOptions.tsx  globalBreadcrumbs.tsx  languageToggle.tsx  modeToggle.tsx
frontend/src/lib/: calendar-utils.ts  rrule-utils.ts
frontend/src/locales/: en.json  fi.json
frontend/src/routes/: __root.tsx  reservations.tsx  resources.$resourceId.update.tsx  resources.create.tsx  resources.index.tsx  resources.tsx
(+28 files in other folders)
