[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "psycopg>=3.3.3",
    "pydantic-settings>=2.13.1",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "ty>=0.0.30",
]
